--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   url_launcher: ^6.2.2
   
   # Icons
-  font_awesome_flutter: ^10.6.0
+  font_awesome_flutter: 10.6.0
 
 dev_dependencies:
   flutter_test:
