--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
         run: cd frontend && flutter pub get
         
       - name: Build web
-        run: cd frontend && flutter build web --release --base-href "/Portfolio-1/"
+        run: cd frontend && flutter build web --release --base-href "/"
         
       - name: Setup Pages
         uses: actions/configure-pages@v4
